--- a/x.html
+++ b/x.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Main branch code</h1>
-    <h1>Bug fix branch code</h1>
+    <h2>To check the file</h2>
 </body>
 </html>
